syntax = "proto3";

package pb;

option go_package = "../pb";

message Node{
  bool leaf = 1;
  bytes content = 2;
}

message InternalNode {
  repeated Child children = 1;
}

message LeafNode {
  bytes key = 1;
  bytes value = 2;
  bytes hash = 3;
}

message  Child{
  bytes hash = 1;
  uint64 version = 2;
  bool leaf = 3;
}

message KV{
  bytes key = 1;
  bytes val = 2;
}

message StateJournal{
  repeated TrieJournal trie_journal = 1;
  //  map<string, bytes> code_journal = 2;
  repeated KV code_journal = 2;
  SnapJournal snap_journal = 3;
  bytes root_hash = 4;
}

message TrieJournal{
  //  map<string, bytes> dirty_set = 1;
  //  map<string, bytes>  prune_set = 2;
  repeated KV dirty_set = 1;
  repeated KV  prune_set = 2;
  uint64 type = 3;
  bytes root_hash = 4;
  bytes root_node_key = 5;
}

message SnapJournal{
  repeated KV destruct = 1;
  repeated KV account = 2;
  repeated SnapStorageKV storage = 3;
}

message SnapStorageKV{
  bytes key = 1;
  SnapStorage snap_storage = 2;
}

message SnapStorage{
  repeated KV snap_storage = 1;
}